[package]
name = "rust_ani"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
dotenv = "0.15.0"
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "chrono"] }

actix-web-httpauth = "0.8.0"
jwt = "0.16.0"
hmac = "0.12.1"
argon2 = "0.4.1"
sha2 = "0.10.6"